SERVER-20118 fix hang in AsyncResultsMerger